Reranking logic robusted considering edge cases & Cache mechanism changed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -334,7 +334,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script>
-        const API_BASE = 'http://localhost:8000/api';
+        const API_BASE = 'http://127.0.0.1:8000/api';
         let chartInstance = null;
 
         function getVotes() {
